--- a/server-worker/pom.xml
+++ b/server-worker/pom.xml
@@ -101,6 +101,14 @@
             <artifactId>spark-sql_${scala.binary.version}</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.fusesource.leveldbjni</groupId>
+            <artifactId>leveldbjni-all</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
