--- a/server-master/pom.xml
+++ b/server-master/pom.xml
@@ -114,6 +114,11 @@
             <plugin>
                 <groupId>org.scalatest</groupId>
                 <artifactId>scalatest-maven-plugin</artifactId>
+                <configuration>
+                    <parallel>false</parallel>
+                    <forkMode>once</forkMode>
+                    <argLine>-Xmx2048m</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.xolstice.maven.plugins</groupId>
