--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -15,17 +15,38 @@
 # limitations under the License.
 #
 
-FROM centos:7.6.1810
+name: License check
 
-ARG rss_version=0.1.1
+# This GitHub workflow checks Apache License v2.0 Header is added if needed
 
-RUN yum install -y java-1.8.0-openjdk-devel sshpass openssh-clients vim epel-release bind-utils \
-    supervisor telnet net-tools procps && \
-    yum clean all && rm -rf /var/cache/yum
+on:
+  pull_request:
+    branches:
+      - master
+      - branch-*
 
-ENV TINI_VERSION v0.19.0
-ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /usr/bin/tini
-RUN chmod +x /usr/bin/tini
+concurrency:
+  group: lincense-${{ github.ref }}
+  cancel-in-progress: true
 
-RUN mkdir -p /opt/
-ADD rss-${rss_version}-bin-release.tar.gz /opt/
+jobs:
+  rat:
+    name: License
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup JDK 8
+        uses: actions/setup-java@v2
+        with:
+          distribution: zulu
+          java-version: 8
+          cache: 'maven'
+          check-latest: false
+      - run: >-
+          build/mvn org.apache.rat:apache-rat-plugin:check
+      - name: Upload rat report
+        if: failure()
+        uses: actions/upload-artifact@v2
+        with:
+          name: rat-report
+          path: "**/target/rat*.txt"
