--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -43,7 +43,7 @@ jobs:
           cache: 'maven'
           check-latest: false
       - run: >-
-          build/mvn org.apache.rat:apache-rat-plugin:check
+          build/mvn org.apache.rat:apache-rat-plugin:check -Pspark-3.1
       - name: Upload rat report
         if: failure()
         uses: actions/upload-artifact@v2
