--- a/pom.xml
+++ b/pom.xml
@@ -623,6 +623,10 @@
                 <style>GOOGLE</style>
               </googleJavaFormat>
               <removeUnusedImports />
+              <importOrder>
+                <wildcardsLast>false</wildcardsLast>
+                <order>java,javax,scala,org,com,com.aliyun.emr.rss,,\\#,\\#com.aliyun.emr.rss</order>
+              </importOrder>
             </java>
             <scala>
               <includes>
