--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,5 +32,5 @@ jobs:
         java-version: ${{ matrix.java }}
         cache: maven
         check-latest: false
-    - name: Build with Maven
+    - name: Test with Maven
       run: build/mvn -Pspark-${{ matrix.spark }} -Plog4j-1 test
