--- a/pom.xml
+++ b/pom.xml
@@ -624,8 +624,7 @@
               </googleJavaFormat>
               <removeUnusedImports />
               <importOrder>
-                <wildcardsLast>false</wildcardsLast>
-                <order>java,javax,scala,,com.aliyun.emr.rss,\\#,\\#com.aliyun.emr.rss</order>
+                <order>java,javax,scala,,com.aliyun.emr.rss</order>
               </importOrder>
             </java>
             <scala>
