--- a/server-master/pom.xml
+++ b/server-master/pom.xml
@@ -72,6 +72,14 @@
             <groupId>org.apache.ratis</groupId>
             <artifactId>ratis-grpc</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-1.2-api</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
