--- a/client/pom.xml
+++ b/client/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>com.aliyun.emr</groupId>
         <artifactId>remote-shuffle-service</artifactId>
-        <version>0.1.2-SNAPSHOT</version>
+        <version>0.1.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
