Use different artifact name for shuffle manager 2/3 (#541)

--- a/server-worker/pom.xml
+++ b/server-worker/pom.xml
@@ -93,7 +93,7 @@
         </dependency>
         <dependency>
             <groupId>com.aliyun.emr</groupId>
-            <artifactId>rss-shuffle-manager</artifactId>
+            <artifactId>${rss.shuffle.manager}</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
