--- a/client-spark/shuffle-manager-2/pom.xml
+++ b/client-spark/shuffle-manager-2/pom.xml
@@ -25,7 +25,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>rss-shuffle-manager</artifactId>
+    <artifactId>shuffle-manager-2</artifactId>
     <packaging>jar</packaging>
     <name>Aliyun E-MapReduce Shuffle Service Shuffle Manager for Spark 2</name>
 
