--- a/docker/helm/templates/configmap.yaml
+++ b/docker/helm/templates/configmap.yaml
@@ -29,10 +29,10 @@ data:
     {{- $namespace  := .Release.Namespace }}
     rss.ha.enabled=true
     rss.ha.service.id=rss
-    rss.ha.master.hosts={{ range until (.Values.masterReplicas |int) }}shuffleservice-master-{{ . }}.rss-svc.{{ $namespace }}.svc.cluster.local,{{ end }}
+    rss.ha.master.hosts={{ range until (.Values.masterReplicas |int) }}shuffleservice-master-{{ . }}.rss-master-svc.{{ $namespace }}.svc.cluster.local,{{ end }}
     rss.ha.nodes.rss={{ range until (.Values.masterReplicas |int) }}node{{ . }},{{ end }}
     {{- range until (.Values.masterReplicas |int) }}
-    rss.ha.address.rss.node{{ . }}=shuffleservice-master-{{ . }}.rss-svc.{{ $namespace }}.svc.cluster.local
+    rss.ha.address.rss.node{{ . }}=shuffleservice-master-{{ . }}.rss-master-svc.{{ $namespace }}.svc.cluster.local
     {{- end }}
     
   rss-env.sh: |
