--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,11 +9,9 @@ on:
   pull_request:
     branches: [ main ]
 
-runs-on: self-hosted
-
 jobs:
   build_rss_on_spark:
-    runs-on: ubuntu-22.04
+    runs-on: [self-hosted]
     strategy:
       fail-fast: false
       matrix:
