--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,4 +48,6 @@ extra:
 nav:
   - Home: index.md
   - Configuration:
-    - configuration.md
+      - configuration.md
+  - Contributor:
+      - Docs and Website: contrib/01_docs_and_website.md
