Add map ids info for each PartitionLocation to enable filtering for map range reading

--- a/pom.xml
+++ b/pom.xml
@@ -382,6 +382,11 @@
         </exclusions>
       </dependency>
       <dependency>
+        <groupId>org.roaringbitmap</groupId>
+        <artifactId>RoaringBitmap</artifactId>
+        <version>0.9.32</version>
+      </dependency>
+      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <scope>test</scope>
