--- a/docker/helm/templates/worker-statefulset.yaml
+++ b/docker/helm/templates/worker-statefulset.yaml
@@ -79,7 +79,7 @@ spec:
           - '-c'
           - "until {{ range until (.Values.masterReplicas |int) }}nslookup shuffleservice-master-{{ . }}.rss-master-svc && {{ end }}true; do echo waiting for master; sleep 2; done && /opt/rss-{{ .Values.rssVersion }}-bin-release/sbin/start-worker.sh"
         resources:
-          {{- toYaml .Values.resources | nindent 12 }}
+          {{- toYaml .Values.resources.worker | nindent 12 }}
         ports:
           - containerPort: {{ get .Values.rss "rss.worker.prometheus.metric.port" | default 9096 }}
             name: metrics
