1.[FEATURE] Add metrics about fetch chunk size, commit files time and get reducer file time.#660 2.[FEATURE] Add a configuration to enable map id filter mechanism.#662 3.[FEATURE][OPTIMIZE] Add map ids info for each PartitionLocation to enable filtering for map range reading.#607

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -141,6 +141,10 @@
       <artifactId>scalatest-funsuite_${scala.binary.version}</artifactId>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.roaringbitmap</groupId>
+          <artifactId>RoaringBitmap</artifactId>
+      </dependency>
   </dependencies>
 
   <build>
