--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
     <scalatest.version>3.2.3</scalatest.version>
     <slf4j.version>1.7.16</slf4j.version>
     <roaringbitmap.version>0.9.32</roaringbitmap.version>
+    <snakeyaml.version>1.30</snakeyaml.version>
     <!--  default hadoop version  -->
     <hadoop.version>3.3.1</hadoop.version>
 
@@ -386,6 +387,11 @@
         <groupId>org.roaringbitmap</groupId>
         <artifactId>RoaringBitmap</artifactId>
         <version>${roaringbitmap.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.yaml</groupId>
+        <artifactId>snakeyaml</artifactId>
+        <version>${snakeyaml.version}</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
