--- a/conf/quota.yaml.template
+++ b/conf/quota.yaml.template
@@ -15,10 +15,18 @@
 # limitations under the License.
 #
 
-tenantId: aa
-name: bb
-quota:
-  diskBytesWritten: -1
-  diskFileCount: -1
-  hdfsBytesWritten: -1
-  hdfsFileCount: -1
+-  tenantId: AAA
+   name: Tom
+   quota:
+     diskBytesWritten: 10000
+     diskFileCount: 200
+     hdfsBytesWritten: -1
+     hdfsFileCount: -1
+
+-  tenantId: BBB
+   name: Jerry
+   quota:
+     diskBytesWritten: -1
+     diskFileCount: -1
+     hdfsBytesWritten: 10000
+     hdfsFileCount: 200
