pom, fmt and CONTRIBUTING

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -21,8 +21,8 @@ optIn.configStyleArguments = false
 rewrite.imports.groups = [
   ["javax?\\..*"],
   ["scala\\..*"],
-  ["(?!com\\.aliyun\\.emr\\.rss\\.).*"],
-  ["com\\.aliyun\\.emr\\.rss\\..*"]
+  ["(?!org\\.apache\\.celeborn\\.).*"],
+  ["org\\.apache\\.celeborn\\..*"]
 ]
 rewrite.imports.sort = scalastyle
 rewrite.rules = [Imports, SortModifiers]
