--- a/server-worker/pom.xml
+++ b/server-worker/pom.xml
@@ -93,7 +93,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.celeborn</groupId>
-            <artifactId>${rss.shuffle.manager}</artifactId>
+            <artifactId>${celeborn.shuffle.manager}</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
